--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
       MYSQL_DATABASE: dashboard_db
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: admin123
-      ADMIN_TOKEN: change-me-admin-token
+      ADMIN_TOKEN: E7js2NY2VkTiWcidpe7E
     ports:
       - "5000:5000"
     volumes:
