--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,25 +1,45 @@
-# Use the official Python image
-FROM python:3.11-slim
+# ============================================
+# Stage 1: Builder
+# ============================================
+FROM python:3.11-slim AS builder
 
-# Set environment variables for MySQL
-ENV MYSQL_HOST=db
-ENV MYSQL_USER=user
-ENV MYSQL_PASSWORD=password
-ENV MYSQL_DATABASE=dashboard_db
-ENV FLASK_APP=app.py
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
+# Copy only requirements
 COPY requirements.txt .
+
+# Install dependencies in a virtual environment
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy ALL application files (not just app.py)
-COPY . .
+# ============================================
+# Stage 2: Runtime
+# ============================================
+FROM python:3.11-slim AS runtime
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Set working directory
+WORKDIR /app
+
+# Copy Python packages from builder stage
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Copy application code
+COPY --chown=appuser:appuser . .
+
+# Switch to non-root user
+USER appuser
 
 # Expose the port Flask runs on
 EXPOSE 5000
 
 # Command to run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "2", "--threads", "4", "--timeout", "60", "app:app"]
