fix scroll when edit

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -4,9 +4,9 @@
 FROM python:3.11-slim AS builder
 
 # Install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y --no-install-recommends \
+#     gcc \
+#     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
